--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/env": "^5.0.2",
+    "@fastify/jwt": "^9.0.3",
     "@fastify/sensible": "^6.0.0",
     "@sinclair/typebox": "^0.34.16",
     "fastify": "^5.0.0",
