--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 LOG_LEVEL=info
 HOSTNAME=0.0.0.0
 PORT=80
-DATABASE_URL=mysql://root:password@localhost/product
+DATABASE_URL=postgresql://user:password@localhost/product
 JWT_SECRET=secret
