--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "test"
   },
   "scripts": {
+    "migrate": "prisma migrate deploy",
+    "client": "npx prisma generate",
     "build": "tsc",
     "start": "node --env-file=.env ./dist/src/index.js",
     "start:ts": "npm run build && npm run start",
@@ -30,15 +32,18 @@
     "@fastify/env": "^5.0.2",
     "@fastify/jwt": "^9.0.3",
     "@fastify/sensible": "^6.0.0",
+    "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0"
   },
   "devDependencies": {
     "@fastify/type-provider-typebox": "^5.1.0",
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.13.1",
     "c8": "^10.1.2",
     "pino-pretty": "^13.0.0",
+    "prisma": "^6.3.1",
+    "tsx": "^4.19.2",
     "typescript": "~5.7.0"
   }
 }
