feat: add redis

--- a/.env.template
+++ b/.env.template
@@ -2,4 +2,5 @@ LOG_LEVEL=info
 HOSTNAME=0.0.0.0
 PORT=80
 DATABASE_URL=postgresql://user:password@localhost/product
+REDIS_URL=redis://localhost:6379
 JWT_SECRET=secret
