--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fastify/autoload": "^6.0.0",
     "@fastify/env": "^5.0.2",
     "@fastify/jwt": "^9.0.3",
+    "@fastify/redis": "^7.0.2",
     "@fastify/sensible": "^6.0.0",
     "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
