--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "migrate": "prisma migrate deploy",
-    "client": "npx prisma generate",
+    "client": "prisma generate",
     "build": "tsc",
     "start": "node --env-file=.env ./dist/src/index.js",
     "start:ts": "npm run build && npm run start",
@@ -33,13 +33,13 @@
     "@fastify/jwt": "^9.0.3",
     "@fastify/redis": "^7.0.2",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/type-provider-typebox": "^5.1.0",
     "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0"
   },
   "devDependencies": {
-    "@fastify/type-provider-typebox": "^5.1.0",
     "@types/node": "^22.13.1",
     "c8": "^10.1.2",
     "pino-pretty": "^13.0.0",
