--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "@fastify/jwt": "^9.0.3",
     "@fastify/redis": "^7.0.2",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.1",
     "@fastify/type-provider-typebox": "^5.1.0",
+    "@fastify/under-pressure": "^9.0.3",
     "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
     "fastify": "^5.0.0",
-    "fastify-plugin": "^5.0.0"
+    "fastify-plugin": "^5.0.0",
+    "swagger-themes": "^1.4.3"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
