--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "migrate": "prisma migrate deploy",
     "client": "prisma generate",
-    "build": "tsc",
+    "build": "rm -fr ./dist && tsc",
     "start": "node --env-file=.env ./dist/src/index.js",
     "start:ts": "npm run build && npm run start",
     "dev": "FASTIFY_AUTOLOAD_TYPESCRIPT=1 node --experimental-strip-types --env-file=.env --watch ./src/index.ts | pino-pretty",
