--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=product
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql      
     ports:
       - '5432:5432'
     networks:
