--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rm -fr ./dist && tsc",
     "start": "node --env-file=.env ./dist/src/index.js",
     "start:ts": "npm run build && npm run start",
-    "dev": "FASTIFY_AUTOLOAD_TYPESCRIPT=1 node --experimental-strip-types --env-file=.env --watch ./src/index.ts | pino-pretty",
+    "dev": "node --env-file=.env --watch ./src/index.ts | pino-pretty",
     "test": "rm -fr ./coverage && npm run build && c8 node --test --env-file=.env ./dist/test/**/*.test.js"
   },
   "repository": {
@@ -30,25 +30,28 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/env": "^5.0.2",
-    "@fastify/jwt": "^9.0.3",
+    "@fastify/jwt": "^10.0.0",
     "@fastify/redis": "^7.0.2",
     "@fastify/sensible": "^6.0.0",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
     "@fastify/type-provider-typebox": "^5.1.0",
     "@fastify/under-pressure": "^9.0.3",
-    "@prisma/client": "^6.3.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@sinclair/typebox": "^0.34.16",
+    "dotenv": "^17.2.3",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
+    "pg": "^8.16.3",
     "swagger-themes": "^1.4.3"
   },
   "devDependencies": {
-    "@types/node": "^22.13.1",
+    "@types/node": "^24.10.1",
     "c8": "^10.1.2",
     "pino-pretty": "^13.0.0",
-    "prisma": "^6.3.1",
+    "prisma": "^7.1.0",
     "tsx": "^4.19.2",
-    "typescript": "~5.7.0"
+    "typescript": "~5.9.0"
   }
 }
